poprawki + dodatkowe opcje

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
 <div id="toolbar">
+	<input type="text" size="1" id="size-x" value="10"> x
+	<input type="text" size="1" id="size-y" value="10">
+	<button id="btn-set-size">Ustaw</button>
 	<select id="grid-box-size">
 		<option value="15">15x15</option>
 		<option value="25">25x25</option>
